feat: Create index.js , received ads from model.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Guayapop-2025</title>
 </head>
 <body>
-  
+  <h1>Guayapop-2025</h1>
+
+  <section id="ads-container"></section>
+
+
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
