--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Styles -->
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/custom.css">
   <title>Guayapop-2025</title>
 </head>
 
@@ -24,12 +27,14 @@
   <main>
     <div class="container">
       <h1 class="mb-4">Published Ads</h1>
+      
+      <section id="ads-cards">
+        <div class="row" id="ads-container">
+          <!-- Cards will be added here -->
+        </div>
+        <div class="loader hidden"></div>
+      </section>
     </div>
-    <section id="ads-cards">
-      <div class="row" id="ads-container">
-        <!-- Cards will be added here -->
-      </div>
-    </section>
   </main>
 
   <!-- Custom JS -->
