feat: Add loaderController , events , dispatch events and view for controller

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row" id="ads-container">
           <!-- Cards will be added here -->
         </div>
-        <div class="loader hidden"></div>
+        <div id="loader-container"></div>
       </section>
     </div>
   </main>
