feat: Add toastController, view, controller, 3 types success, error, info. Toast from boostrap

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="./css/styles.css">
-  <link rel="stylesheet" href="./css/custom.css">
+  <link rel="stylesheet" href="./css/loader.css">
+  <link rel="stylesheet" href="./css/errorToast.css">
   <title>Guayapop-2025</title>
 </head>
 
@@ -34,7 +35,9 @@
         </div>
         <div id="loader-container"></div>
       </section>
+      <div id="toast-container"></div>
     </div>
+
   </main>
 
   <!-- Custom JS -->
