feat: Complete signup with validation, loader, and toasts

--- a/signup.html
+++ b/signup.html
@@ -92,10 +92,10 @@
   </main>
 
   <!-- Toast container -->
-  <!-- <div id="toast-container"></div> -->
+  <!-- <div id="notifications"></div> -->
 
   <!-- Loader container -->
-  <!-- <div id="loader-container"></div> -->
+  <div id="loader-container"></div>
 
   <!-- Custom JS -->
   <script type="module" src="./js/signup.js"></script>
