--- a/login.html
+++ b/login.html
@@ -79,6 +79,7 @@
 
   <!-- Custom JS -->
   <script type="module" src="./js/login.js"></script>
+  <script type="module" src=".js/session.js"></script>
 </body>
 
 </html>
