--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/loader.css">
   <link rel="stylesheet" href="./css/errorToast.css">
+  <link rel="stylesheet" href="./css/adDetail.css">
+
+  
   <title>Guayapop-2025</title>
 </head>
 
