WIP: 🚧 Delete button, logic and flow start

--- a/signup.html
+++ b/signup.html
@@ -78,9 +78,18 @@
               <div class="text-center mt-3">
                 <small class="text-muted">
                   Already have an account?
-                  <a href="login.html">Login here</a>
+                  <a href="login.html" class="fw-bold">Login here</a>
                 </small>
               </div>
+
+                <!-- Back to ads link -->
+                <div class="text-center">
+                  <small class="text-muted">
+                    <a href="index.html" class="text-decoration-none">
+                      ← Back to ads listing
+                    </a>
+                  </small>
+                </div>
 
             </div>
           </div>
