feat: authentication and CRUD complete - all required features working

--- a/login.html
+++ b/login.html
@@ -41,12 +41,12 @@
               <h1 class="h3 mb-4 text-center">Login</h1>
 
               <!-- Login Form -->
-              <form id="login-form">
+              <form id="login-form" >
 
                 <!-- Email field -->
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input id="email" type="email" class="form-control" placeholder="your@email.com" required>
+                  <input id="email" type="text" class="form-control" placeholder="your@email.com" required>
                 </div>
 
                 <!-- Password field -->
