--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
   <!-- Styles -->
   <link rel="stylesheet" href="./css/styles.css">
@@ -14,7 +15,7 @@
   <link rel="stylesheet" href="./css/errorToast.css">
   <link rel="stylesheet" href="./css/adDetail.css">
 
-  
+
   <title>Guayapop-2025</title>
 </head>
 
@@ -24,23 +25,50 @@
   <nav class="navbar navbar-light bg-white shadow-sm mb-4">
     <div class="container">
       <!-- Logo/Brand -->
-        <span class="fs-4">📢 Wallapop</span>
+      <span class="fs-4">📢 Wallapop</span>
 
-        <!-- Session container - buttons will be built here by sessionController -->
+
+      <!-- Session container - buttons will be built here by sessionController -->
       <div id="session-container" class="d-flex gap-2">
-     
+
         <!-- Buttons inserted dynamically by JavaScript -->
       </div>
     </div>
   </nav>
+
+
+
   <!-- Main -->
   <main>
     <div class="container">
       <h1 class="mb-4">Published Ads</h1>
 
+      <div class="container mb-4">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-lg-6">
+            <div class="input-group">
+              <input type="text" class="form-control" id="search-input"
+                placeholder="Search ads by name or description...">
+              <button class="btn btn-primary" id="search-button">
+                <i class="bi bi-search"></i> Search
+                <button class="btn btn-outline-secondary" id="show-all-button" style="display: none;">
+                  <i class="bi bi-arrow-clockwise"></i> Show All
+                </button>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
       <section id="ads-cards">
         <div class="row" id="ads-container">
           <!-- Cards will be added here -->
+        </div>
+
+        <div id="pagination-container" class="mt-4">
+          <!-- Los botones de paginación se insertarán aquí -->
         </div>
         <div id="loader-container"></div>
       </section>
