feat: 🌐 Filter  by tags add .

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="container">
       <h1 class="mb-4">Published Ads</h1>
 
+      <!-- Search Nav -->
       <div class="container mb-4">
         <div class="row justify-content-center">
           <div class="col-md-8 col-lg-6">
@@ -59,6 +60,34 @@
           </div>
         </div>
       </div>
+
+      <!-- Search by tags -->
+      <div class="container mb-3">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
+      <div class="d-flex justify-content-center gap-2 flex-wrap">
+        <button class="btn btn-sm btn-outline-primary filter-tag-btn" data-tag="electronics">
+          📱 Electronics
+        </button>
+        <button class="btn btn-sm btn-outline-primary filter-tag-btn" data-tag="furniture">
+          🪑 Furniture
+        </button>
+        <button class="btn btn-sm btn-outline-primary filter-tag-btn" data-tag="clothing">
+          👕 Clothing
+        </button>
+        <button class="btn btn-sm btn-outline-primary filter-tag-btn" data-tag="books">
+          📚 Books
+        </button>
+        <button class="btn btn-sm btn-outline-primary filter-tag-btn" data-tag="sports">
+          ⚽ Sports
+        </button>
+        <button class="btn btn-sm btn-outline-danger" id="clear-filter-btn" style="display: none;">
+          ❌ Clear Filter
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
